--- a/requirements.txt
+++ b/requirements.txt
@@ -143,7 +143,7 @@ langchain==0.2.14
     #   langchain-wenxin
 langchain-community==0.2.12
     # via -r requirements.txt
-langchain-core==0.2.34
+#langchain-core==0.2.34
     # via
     #   -r requirements.txt
     #   langchain
