--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ async-timeout==4.0.3
 attrs==24.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
+build==1.2.1
 cachetools==5.5.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
@@ -22,6 +23,7 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.8
+importlib_metadata==8.4.0
 Jinja2==3.1.4
 jiter==0.5.0
 jsonpatch==1.33
@@ -47,12 +49,14 @@ orjson==3.10.7
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
+pip-tools==7.4.1
 protobuf==5.27.3
 pyarrow==17.0.0
-pydantic==1.10.14
+pydantic==1.10.18
 pydantic_core==2.20.1
 pydeck==0.9.1
 Pygments==2.18.0
+pyproject_hooks==1.1.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.2
@@ -69,6 +73,7 @@ sseclient-py==1.8.0
 streamlit==1.37.1
 tenacity==8.5.0
 toml==0.10.2
+tomli==2.0.1
 tornado==6.4.1
 tqdm==4.66.5
 typing-inspect==0.9.0
@@ -77,3 +82,4 @@ tzdata==2024.1
 urllib3==2.2.2
 wikipedia==1.4.0
 yarl==1.9.4
+zipp==3.20.0
